kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-ml-service
  labels:
    app: api-ml
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: api-ml
