kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ml-ingress
spec:
  defaultBackend:
    service:
      name: api-ml-service
      port:
        number: 8000
